--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,25 +1,18 @@
 {
     "env": {
-        "es6": true
+      "browser": true,
+      "jest": true,
+      "es6": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "google"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
+    "plugins": ["import"],
+    "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 11,
-        "sourceType": "module"
+      "ecmaVersion": 2018,
+      "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
     "rules": {
+      "no-console": "warn",
+      "no-eval": "error",
+      "import/first": "error"
     }
-}
+  }
