--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .ts,.js --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .ts,.js --ignore-path .gitignore ."
   },
   "eslintConfig": {
     "extends": "react-app"
