--- a/src/test/resources/packagerConfig/emptyCascSection.yaml
+++ b/src/test/resources/packagerConfig/emptyCascSection.yaml
@@ -1,4 +1,8 @@
 ---
+systemProperties:
+  jenkins.install.runSetupWizard: "true"
+  jenkins.model.Jenkins.slaveAgentPort: "5000"
+  jenkins.model.Jenkins.slaveAgentPortEnforce: "true"
 plugins:
 - groupId: "org.jenkins-ci.plugins"
   artifactId: "AnchorChain"
