--- a/src/test/resources/packagerConfig/emptyDockerTag.yaml
+++ b/src/test/resources/packagerConfig/emptyDockerTag.yaml
@@ -1,4 +1,8 @@
 ---
+systemProperties:
+  jenkins.install.runSetupWizard: "true"
+  jenkins.model.Jenkins.slaveAgentPort: "5000"
+  jenkins.model.Jenkins.slaveAgentPortEnforce: "true"
 casc:
   id: "casc"
   source:
