--- a/src/test/resources/packagerConfig/simpleConfig.yml
+++ b/src/test/resources/packagerConfig/simpleConfig.yml
@@ -1,4 +1,8 @@
 ---
+systemProperties:
+  jenkins.install.runSetupWizard: "true"
+  jenkins.model.Jenkins.slaveAgentPort: "5000"
+  jenkins.model.Jenkins.slaveAgentPortEnforce: "true"
 casc:
   id: "casc"
   source:
