--- a/src/test/resources/packagerConfig/emptyDockerTag.yaml
+++ b/src/test/resources/packagerConfig/emptyDockerTag.yaml
@@ -13,9 +13,9 @@ plugins:
   source:
     version: "1.0"
 - groupId: "org.jenkins-ci.plugins"
-  artifactId: "gitlab-plugin"
+  artifactId: "ApicaLoadtest"
   source:
-    version: "1.5.13"
+    version: "1.10"
 war:
   groupId: "org.jenkins-ci.main"
   artifactId: "jenkins-war"
