--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.jenkins.tools.custom-war-packager</groupId>
+			<artifactId>custom-war-packager-lib</artifactId>
+			<version>2.0-alpha-3-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
   
 	<licenses>
