--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.23</version>
+		</dependency>
 	</dependencies>
   
 	<licenses>
