--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-<<<<<<< HEAD
-    "react-scripts": "3.4.1"
-=======
     "react-scripts": "3.4.1",
-    "react-simple-code-editor": "^0.11.0"
->>>>>>> 31497acd3560d4c8ffd23f8e0ffa052b575d0af5
+    "react-simple-code-editor": "^0.11.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
