--- a/src/test/resources/packagerConfig/simpleConfig.yml
+++ b/src/test/resources/packagerConfig/simpleConfig.yml
@@ -9,9 +9,9 @@ casc:
     dir: "casc.yml"
 plugins:
 - groupId: "org.jenkins-ci.plugins"
-  artifactId: "AnchorChain"
+  artifactId: "dotnet-as-script"
   source:
-    version: "1.0"
+    version: "1.0.2"
 - groupId: "org.jenkins-ci.plugins"
   artifactId: "ApicaLoadtest"
   source:
