--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-radio-group": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-code-editor": "^0.11.0",
