--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,31 +1,22 @@
-# pull official base image
+# Docker Image which is used as foundation to create
+# a custom Docker Image with this Dockerfile
 FROM node:13.12.0-alpine
-
-# set working directory
-# pull official base image
-FROM node:13.12.0-alpine  AS builder
-WORKDIR /app
-COPY . ./
-RUN yarn install
-RUN yarn build
-
-# second file actually running the situation
-FROM node:13.12.0-alpine
-RUN yarn global add serve
-WORKDIR /app
-COPY --from=builder /app/build .
-CMD ["serve", "-p", "80", "-s", "."]doc
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install --silent
-
-# add app
-COPY . ./
-
-# start app
-CMD ["npm", "start"]
+ 
+# A directory within the virtualized Docker environment
+# Becomes more relevant when using Docker Compose later
+WORKDIR /usr/src/app
+ 
+# Copies package.json and package-lock.json to Docker environment
+COPY package*.json ./
+ 
+# Installs all node packages
+RUN npm install
+ 
+# Copies everything over to Docker environment
+COPY . .
+ 
+# Uses port which is used by the actual application
+EXPOSE 3000
+ 
+# Finally runs the application
+CMD [ "npm", "start" ]
