Connect backend and front-end using the new docker container config (#82)
* Fixed proxy according to docker container

* Fixed not found jar file issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - '.:/app'
     ports:
       - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
     restart: always
@@ -25,4 +27,3 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     stdin_open: true
-    
