Add jacoco code coverage report generation

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,44 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<executions>
+				<execution>
+					<id>coverage-initialize</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>coverage-report</id>
+					<phase>post-integration-test</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+				</execution>
+				<!-- Threshold -->
+				<execution>
+					<id>coverage-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+							<rule>
+								<element>CLASS</element>
+								<excludes>
+									<exclude>com.asimio.demo.Application</exclude>
+								</excludes>
+							</rule>
+						</rules>
+						<outputDirectory>${project.build.directory}/coverage-reports/jacoco</outputDirectory>
+					</configuration>
+				</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
