--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			<artifactId>custom-war-packager-lib</artifactId>
 			<version>1.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>1.58</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
   
 	<licenses>
