--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<version>1.58</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.palantir.docker.compose/docker-compose-rule-junit4 -->
+		<dependency>
+			<groupId>com.palantir.docker.compose</groupId>
+			<artifactId>docker-compose-rule-junit4</artifactId>
+			<version>0.29.1</version>
+		</dependency>
 	</dependencies>
   
 	<licenses>
