--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -6,8 +6,8 @@ services:
   app-server:
     # Configuration for building the docker image for the backend service
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../..
+      dockerfile: ../../../Dockerfile
     volumes:
       - '/app'
     ports:
@@ -17,8 +17,8 @@ services:
   app-client:
     container_name: cds_front-end
     build:
-      context: frontend/
-      dockerfile: Dockerfile
+      context: ../../..
+      dockerfile: ../../../frontend/Dockerfile
     volumes:
       - '.:/app'
       - '/app/node_modules'
