--- a/Dockerfile.infra
+++ b/Dockerfile.infra
@@ -1,8 +1,8 @@
 FROM maven:3.6.0-jdk-8-alpine AS MAVEN_BUILD
 
 COPY pom.xml /build/
-
-COPY src /build/src/
+COPY src/ /build/src/
+COPY config/ /build/config/
 
 WORKDIR /build/
 
