--- a/Dockerfile.infra
+++ b/Dockerfile.infra
@@ -1,13 +1,13 @@
 FROM maven:3.6.0-jdk-8-alpine AS MAVEN_BUILD
 
 COPY pom.xml /build/
-
-COPY src /build/src/
+COPY src/ /build/src/
+COPY config/ /build/config/
 
 WORKDIR /build/
 
 RUN mvn clean package spring-boot:repackage
-RUN mv target/custom-distribution-service-0.0.1.jar custom-distribution-service.jar
+RUN mv target/custom-distribution-service-*.jar custom-distribution-service.jar
 
 FROM node:14.7.0-alpine AS NODE_BUILD
 
