--- a/Dockerfile.infra
+++ b/Dockerfile.infra
@@ -15,6 +15,7 @@ WORKDIR /build
 COPY frontend/package* /build/
 RUN npm install
 COPY frontend/ /build/
+ENV REACT_APP_API_URL /
 RUN npm run build
 
 FROM openjdk:8-jre-alpine
