--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<deploy.skip>true</deploy.skip>
+		<tagNameFormat>@{project.version}</tagNameFormat>
 	</properties>
 
   <scm>
