--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^1.0.5",
     "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-radio-group": "^3.0.3",
     "react-router-dom": "^5.2.0",
