--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<deploy.skip>true</deploy.skip>
+		<maven.deploy.skip>true</maven.deploy.skip>
 		<tagNameFormat>@{project.version}</tagNameFormat>
 	</properties>
 
