--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_GITHUB_COMMUNITY_URL=https://api.github.com/repos/sladyn98/custom-distribution-service-community-configurations/contents/configurations
+REACT_APP_GITHUB_COMMUNITY_REPO=halkeye/custom-distribution-service-community-configurations
 REACT_APP_API_URL=/
+#DEV_API_SERVER_PROXY=https://customize.jenkins-infra.g4v.dev/
