--- a/Dockerfile.infra
+++ b/Dockerfile.infra
@@ -18,7 +18,7 @@ COPY frontend/ /build/
 ENV REACT_APP_API_URL /
 RUN npm run build
 
-FROM openjdk:8-jre-alpine
+FROM maven:3.6.0-jdk-8-alpine
 
 LABEL maintainer="sladynnunes98@gmail.com"
 
