--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dynamic-modal": "^1.1.1",
     "react-radio-group": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
