--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 REACT_APP_GITHUB_COMMUNITY_REPO=halkeye/custom-distribution-service-community-configurations
-REACT_APP_API_URL=/
+REACT_APP_API_URL=http://localhost:8080/
 #DEV_API_SERVER_PROXY=https://customize.jenkins-infra.g4v.dev/
